# awtrix3-tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
awtrix_files/: __main__.py  fetch.py  la_icon.py  list.py  save_la_icon.py  send.py  sync.py
