[project]
name = "awtrix3-tools"
description = "Tools for managing an AWTRIX3 Smart Clock."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uritemplate",
    "pillow",
    "ada-url>=1.15.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Joseph Chiocchi"
email = "joe@yolk.cc"

[tool.ruff]
fix = true

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"