[project]
name = "awtrix3-tools"
description = "Tools for managing an AWTRIX3 Smart Clock."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uritemplate",
    "pillow",
    "ada-url>=1.15.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Joseph Chiocchi"
email = "joe@yolk.cc"

[tool.ruff]
fix = true

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
lint = [
  "pyright",
  "ruff",
  "toml-sort",
]
pre-commit = [
  "pre-commit",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.tomlsort]
all = false
in_place = true
no_comments = false
sort_first = ["project"]
sort_inline_arrays = false
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides.project.first = ["name", "authors", "maintainers"]
overrides."*dependencies*".inline_arrays = true
